Remove typepollution test from JDK 21 profile (leave just in 17) -- smaller diff, no need to duplicate